--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,12 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 apply plugin: 'org.jetbrains.kotlin.android'
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
 android {
     compileSdk 34
 
@@ -34,6 +40,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'proguard-rules.pro'
     }
+    
     lintOptions {
         disable 'InvalidPackage'
     }
