--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,6 +25,7 @@ rootProject.allprojects {
 
 apply plugin: 'com.android.library'
 apply plugin: 'org.jetbrains.kotlin.android'
+apply plugin: 'java'
 
 android {
     compileSdk 34
